--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 wandb/vendor/** linguist-vendored
-wandb/proto/py*/*_pb2.py linguist-generated
-wandb/proto/py*/*_pb2.pyi linguist-generated
+wandb/proto/v*/*_pb2.py linguist-generated
+wandb/proto/v*/*_pb2.pyi linguist-generated
 *_generated.py linguist-generated
