--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,6 +226,9 @@ jobs:
       notify_on_failure:
         type: boolean
         default: false
+      notify_on_failure_channel:
+        type: string
+        default: "$SLACK_SDK_NIGHTLY_CI_CHANNEL"
       parallelism:
         type: integer
         default: 1
@@ -262,12 +265,16 @@ jobs:
             - when:
                 condition: << parameters.notify_on_failure >>
                 steps:
+                  - run:
+                      name: TESTO
+                      command: |
+                        echo << parameters.notify_on_failure_channel >>
                   - slack/notify:
                       event: fail
                       template: basic_fail_1
                       mentions: "@channel"
                       # taken from slack-secrets context
-                      channel: $SLACK_SDK_NIGHTLY_CI_CHANNEL
+                      channel: << parameters.notify_on_failure_channel >>
 
   pytest:
     parameters:
@@ -1020,6 +1027,9 @@ workflows:
                 - "imports12"
           name: "func-s_<<matrix.shard>>-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "func-s_<<matrix.shard>>-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          context: slack-secrets
+          notify_on_failure: true
+          notify_on_failure_channel: $SLACK_SDK_NIGHTLY_CI_GROWTH_CHANNEL
       #
       # standalone GPU tests on Windows
       #
@@ -1313,6 +1323,9 @@ workflows:
                 - "imports12"
           name: "func-s_<<matrix.shard>>-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "func-s_<<matrix.shard>>-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          context: slack-secrets
+          notify_on_failure: true
+          notify_on_failure_channel: $SLACK_SDK_NIGHTLY_CI_GROWTH_CHANNEL
       #
       # standalone GPU tests on Windows
       #
